abstract class Shape {
    public abstract String draw();
}