class Square extends Shape {
    @Override
    public String draw() {
        return "Drawing a Square";
    }
}